--- a/ansible/group_vars/localhost.sample
+++ b/ansible/group_vars/localhost.sample
@@ -4,9 +4,6 @@
 # computer name here
 computer_name: "mycomputer"
 
-# basic permission (for multiuser setting)
-permission: "022"
-
 # language setting (first one is using)
 languages:
   - ja
@@ -28,165 +25,165 @@ security:
 
 # symlink targets (key: src, dest(optional))
 symlinks:
-  - src: .editorconfig
-  - src: .eslintrc.json
-  - src: .gemrc
-  - src: .git_template
-  - src: .gitconfig
-  - src: .gitignore.global
-    dest: .gitignore
-  - src: .sass-lint.yml
-  - src: .tmux.conf
-  - src: .tslintrc.json
-  - src: .vim
-  - src: .vimrc
-  - src: .zsh
-  - src: .zshrc
-  - src: bin
-
-# profiles settings
-profiles:
-  src: "~/Dropbox/profiles/"
-  dest: "~/profiles/"
-  symlinks:
-    - src: .ssh
-    - src: .config
-    - src: .gitconfig.local
-    - src: .zshrc.local
-  fonts: "~/profiles/fonts/"
+  - { src: .editorconfig }
+  - { src: .eslintrc.json }
+  - { src: .gemrc }
+  - { src: .git_template }
+  - { src: .gitconfig }
+  - { src: .gitignore.global, dest: .gitignore }
+  - { src: .sass-lint.yml }
+  - { src: .tmux.conf }
+  - { src: .tslintrc.json }
+  - { src: .vim }
+  - { src: .vimrc }
+  - { src: .zsh }
+  - { src: .zshrc }
+  - { src: bin }
 
 # anyenv versions
 rbenv:
-  - 2.4.0
-  - 2.1.10
+  global: 2.4.0
+  versions:
+    - 2.4.0
+    - 2.1.10
 ndenv:
-  - 7.4.0
-  - 6.9.4
+  global: 8.2.1
+  versions:
+    - 8.2.1
+    - 7.10.1
+    - 6.9.4
+    - 4.8.0
 phpenv:
-  - 7.1.1
-  - 5.6.30
-  - 5.5.38
-  - 5.4.45
+  global: 7.1.1
+  versions:
+    - 7.1.1
+    - 5.6.30
+    - 5.5.38
+    - 5.4.45
 goenv:
-  - 1.7.5
-  - 1.6.4
+  global: 1.8.3
+  versions:
+    - 1.8.3
+    - 1.7
+    - 1.6
 pyenv:
-  - 2.7.13
-  - 3.6.0
+  global_python2: 2.7.13
+  global_python3: 3.6.0
+  versions:
+    - 2.7.13
+    - 3.6.0
 
 # MacAppStore by mas-cli
 macappstore:
-  - name: Xcode
-    id: 497799835
-  - name: 1Password
-    id: 443987910
-  - name: Skitch
-    id: 425955336
-  - name: Alfred
-    id: 405843582
-  - name: Slack
-    id: 803453959
-  - name: Keynote
-    id: 409183694
+  - { name: 1Password, id: 443987910 }
+  - { name: Alfred,    id: 405843582 }
+  - { name: Keynote,   id: 409183694 }
+  - { name: Skitch,    id: 425955336 }
+  - { name: Slack,     id: 803453959 }
+  - { name: Xcode,     id: 497799835 }
 
 # Homebrew packages
 # exclude: git, ansible, mas, zsh
 homebrew:
-  # GNU packages
-  - name: xz
-  - name: binutils
-  - name: coreutils
-  - name: findutils
-  - name: autoconf
-  - name: automake
-  - name: libtool
+  # GNU packages, libraries
+  - { name: autoconf }
+  - { name: automake }
+  - { name: binutils }
+  - { name: coreutils }
+  - { name: findutils }
+  - { name: libtool }
+  - { name: xz }
+  - { name: boost } # for github.com/nixprime/cpsm
 
   # command line tools
-  - name: reattach-to-user-namespace
-  - name: lv
-  - name: vim
-    install_options: [with-lua, with-luajit, with-python3]
-  - name: tmux
-    install_options: [with-utf8proc]
-  - name: readline
+  - { name: cmake }
+  - { name: jq }
+  - { name: lv }
+  - { name: massren, tap: laurent22/massren }
+  - { name: nkf }
+  - { name: pt }
+  - { name: readline }
+  - { name: reattach-to-user-namespace }
+  - { name: tmux, install_options: [with-utf8proc] }
+  - { name: tree }
+  - { name: wget }
 
-  # utils
-  - name: wget
-  - name: tig
-  - name: pt
-  - name: jq
-  - name: imagemagick
-  - name: nkf
-  - name: tree
-  - name: massren
-    tap: laurent22/massren
-  - name: terminal-notifier
+  # editor
+  - { name: neovim }
+  - { name: vim, install_options: [with-lua, with-luajit, with-python3] }
 
-  # for PHP
-  - name: composer
+  # Git tools
+  - { name: tig }
+
+  # visual tools
+  - { name: imagemagick }
+
+  # PHP package manager
+  - { name: composer }
 
 # Homebrew Cask packages
-# exclude: iterm2
+# already installed:
+# - { name: iterm2 }
 homebrew_cask:
-  # storage
-  - name: dropbox
+  # security
+  - { name: avast }
 
   # browser, internet terminal
-  - name: google-chrome
-  - name: firefox
-  - name: chatwork
+  - { name: google-chrome }
+  - { name: firefox }
 
   # launcher
-  - name: alfred
+  - { name: alfred }
 
-  # security
-  - name: avast
+  # storage
+  - { name: dropbox }
 
   # virtualization
-  - name: virtualbox
-  - name: vagrant
-  - name: docker
-  - name: vmware-fusion
-
-  # network proxy
-  - name: charles
+  - { name: docker }
+  - { name: vagrant }
+  - { name: virtualbox }
+  - { name: vmware-fusion }
 
   # development tools
-  - name: imageoptim
-  - name: macwinzipper
-
-  # presentation, capture
-  - name: keycastr
-  - name: skitch
-
-  # sns tools
-  - name: skype
-  - name: slack
-
-  # multimedia
-  - name: vlc
-  - name: sdformatter
+  - { name: charles }
+  - { name: imageoptim }
+  - { name: macwinzipper }
 
   # adobe
-  - name: adobe-reader
-  - name: adobe-creative-cloud
-  - name: adobe-photoshop-cc
+  - { name: adobe-creative-cloud }
+  - { name: adobe-photoshop-cc }
+  - { name: adobe-reader }
 
-# npm global packages (depend from node)
+  # sns tools
+  - { name: chatwork }
+  - { name: skype }
+
+  # capture
+  - { name: skitch }
+
+  # multimedia
+  - { name: sdformatter }
+  - { name: vlc }
+
+  # presentation
+  - { name: keycastr }
+
+# npm global packages
 npm:
+  # language, preprocessor
+  - { name: compass }
+  - { name: sass }
+  - { name: typescript }
+
   # task runner
-  - name: webpack
-  - name: gulp
-  - name: grunt
+  - { name: grunt }
+  - { name: gulp }
+  - { name: webpack }
 
   # lint, validator
-  - name: csslint
-  - name: sass-lint
-  - name: jshint
-  - name: eslint
-  - name: jsonlint
-  - name: tslint
-
-  # css preprocessor
-  - name: sass
-  - name: compass
+  - { name: csslint }
+  - { name: eslint }
+  - { name: jshint }
+  - { name: jsonlint }
+  - { name: sass-lint }
+  - { name: tslint }
