--- a/ansible/roles/preferences/tasks/main.yml
+++ b/ansible/roles/preferences/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Dock を拡大する
+- name: Dock settings (1/4)
   osx_defaults:
     domain: com.apple.dock
     key: magnification
@@ -8,7 +8,7 @@
     state: present
   tags: preferences
 
-- name: Dock を拡大する際のサイズ指定
+- name: Dock settings (2/4)
   osx_defaults:
     domain: com.apple.dock
     key: largesize
@@ -17,16 +17,16 @@
     state: present
   tags: preferences
 
-- name: Dock のサイズ指定
+- name: Dock settings (3/4)
   osx_defaults:
     domain: com.apple.dock
     key: tilesize
     type: float
-    value: 16
+    value: 32
     state: present
   tags: preferences
 
-- name: Dock を自動的に隠す
+- name: Dock settings (4/4)
   osx_defaults:
     domain: com.apple.dock
     key: autohide
@@ -35,31 +35,31 @@
     state: present
   tags: preferences
 
-- name: FileVault のステータス確認
+- name: FileVault settings (1/4)
   shell: fdesetup isactive
   register: filevault_status
   changed_when: False
   tags: preferences
 
-- name: FileVault を設定する
+- name: FileVault settings (2/4)
   shell: fdesetup {{ "enable" if security.filevault else "disable" }}
   when: (security.filevault is defined) and (filevault_status.stdout == "true" and security.filevault != True) or (filevault_status.stdout == "false" and security.filevault == True)
   become: True
   tags: preferences
 
-- name: Firewall のステータス確認
+- name: FileVault settings (3/4)
   shell: defaults read /Library/Preferences/com.apple.alf globalstate
   register: firewall_status
   changed_when: False
   tags: preferences
 
-- name: Firewall を設定する
+- name: FileVault settings (4/4)
   shell: defaults write /Library/Preferences/com.apple.alf globalstate -int {{ "1" if security.firewall else "0" }}
   when: (security.firewall is defined) and (firewall_status.stdout == 1 and security.firewall != True) or (firewall_status.stdout == 0 and security.firewall == True)
   become: True
   tags: preferences
 
-- name: スリープ解除にパスワード要求
+- name: sleep settings (1/2)
   osx_defaults:
     domain: com.apple.screensaver
     key: askForPassword
@@ -68,7 +68,7 @@
     state: present
   tags: preferences
 
-- name: スリープ開始後からパスワード要求を行う
+- name: sleep settings (2/2)
   osx_defaults:
     domain: com.apple.screensaver
     key: askForPasswordDelay
@@ -77,7 +77,7 @@
     state: present
   tags: preferences
 
-- name: IME でライブ変換を行わない
+- name: IME settings
   osx_defaults:
     domain: com.apple.inputmethod.Kotoeri
     key: JIMPrefLiveConversionKey
@@ -86,21 +86,21 @@
     state: present
   tags: preferences
 
-- name: 言語設定
+- name: languages settings
   osx_defaults:
     key: AppleLanguages
     type: array
     value: "{{ languages }}"
   tags: preferences
 
-- name: 地域設定
+- name: locale settings
   osx_defaults:
     key: AppleLocale
     type: string
     value: "{{ locale }}"
   tags: preferences
 
-- name: トラックパッドのスクロール方向をナチュラルの逆に
+- name: trackpad settings
   osx_defaults:
     key: com.apple.swipescrolldirection
     type: bool
@@ -108,7 +108,7 @@
     state: present
   tags: preferences
 
-- name: Siri を出さない
+- name: disable Siri
   osx_defaults:
     domain: com.apple.Siri
     key: StatusMenuVisible
@@ -117,20 +117,20 @@
     state: present
   tags: preferences
 
-- name: ソフトウェアアップデートの自動チェックのステータス取得
+- name: software update settings (1/2)
   shell: softwareupdate --schedule | awk -F'Automatic check is ' '{ print $2 }'
   register: autoupdate_status
   changed_when: False
   become: True
   tags: preferences
 
-- name: ソフトウェアアップデートの自動チェック設定
+- name: software update settings (2/2)
   shell: softwareupdate --schedule "{{ "on" if autoupdate else "off" }}"
   when: (autoupdate is defined) and (autoupdate_status.stdout == "on" and autoupdate == False) or (autoupdate_status.stdout == "off" and autoupdate == True)
   become: True
   tags: preferences
 
-- name: .DS_Store を作らない設定
+- name: disable .DS_Store
   osx_defaults:
     domain: com.apple.desktopservices
     key: DSDontWriteNetworkStores
