--- a/.vim/settings/bundles-filetypes.toml
+++ b/.vim/settings/bundles-filetypes.toml
@@ -64,13 +64,8 @@ repo = 'othree/yajs.vim'
 on_ft = 'javascript'
 
 [[plugins]]
-repo = 'jiangmiao/simple-javascript-indenter'
+repo = 'pangloss/vim-javascript'
 on_ft = 'javascript'
-hook_add = '''
-  let g:SimpleJsIndenter_BriefMode = 1
-
-  let g:SimpleJsIndenter_CaseIndentLevel = 0
-'''
 
 [[plugins]]
 repo = 'othree/es.next.syntax.vim'
