はちゃめちゃが押し寄せてきちゃってるので、この後大きく見直す

--- a/.vim/settings/bundles-filetypes.toml
+++ b/.vim/settings/bundles-filetypes.toml
@@ -152,6 +152,18 @@ on_ft = 'toml'
 
 
 # ---------------------------------------------------------------------------- #
+# filetype twig
+# ---------------------------------------------------------------------------- #
+
+[[plugins]]
+repo = 'lumiliet/vim-twig'
+
+[[plugins]]
+repo = 'mitsuhiko/vim-jinja'
+
+
+
+# ---------------------------------------------------------------------------- #
 # filetype typescript
 # ---------------------------------------------------------------------------- #
 
@@ -178,6 +190,16 @@ on_ft = 'vim'
 repo = 'syngan/vim-vimlint'
 depends = ['ynkdir/vim-vimlparser']
 on_ft = 'vim'
+
+
+
+# ---------------------------------------------------------------------------- #
+# filetype vue
+# ---------------------------------------------------------------------------- #
+
+[[plugins]]
+repo = 'posva/vim-vue'
+on_ft = 'vue'
 
 
 
