--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -1,9 +1,9 @@
 [defaults]
-hostfile            = ./hosts
+force_handlers      = True
 host_key_checking   = False
+inventory           = ./hosts
+log_path            = /tmp/logfile
 nocows              = 1
+retries             = 5
 retry_files_enabled = False
 roles_path          = ./roles
-force_handlers      = True
-log_path            = /tmp/logfile
-executable          = /bin/zsh -l
