--- a/.tmux.conf
+++ b/.tmux.conf
@@ -80,8 +80,8 @@ set-option -g status-interval 5
 
 # customize right area (vagrant machines)
 # before: `ln -s /path/to/dotfiles/bin/ ~/bin`
-set-option -g status-right "#(${HOME}/bin/vm_status.sh)"
-set-option -g status-right-length 50
+#set-option -g status-right "#(${HOME}/bin/vm_status.sh)"
+#set-option -g status-right-length 50
 
 # customize left area (session: windows)
 set-option -g status-left "[#S] "
