--- a/.vim/settings/linter.toml
+++ b/.vim/settings/linter.toml
@@ -5,19 +5,17 @@
 [[plugins]]
 repo = 'w0rp/ale'
 hook_add = '''
-  let g:ale_sign_error = '>>'
-  let g:ale_sign_warning = '> '
+  let g:ale_sign_column_always = 1
 
-  let g:ale_echo_msg_error_str = 'E'
-  let g:ale_echo_msg_warning_str = 'W'
-
-  let g:ale_echo_msg_format = '[%linter%] %s [%severity%]'
+  let g:ale_lint_on_text_changed = 'never'
 
   let g:ale_lint_on_enter = 0
 
   let g:ale_set_loclist = 0
 
   let g:ale_set_quickfix = 1
+
+  let g:ale_open_list = 1
 '''
 
 [[plugins]]
