--- a/.vim/settings/syntax.toml
+++ b/.vim/settings/syntax.toml
@@ -90,6 +90,13 @@ repo = 'lumiliet/vim-twig'
 repo = 'mitsuhiko/vim-jinja'
 
 [[plugins]]
+repo = 'hashivim/vim-terraform'
+on_ft = ['terraform']
+hook_add = '''
+  let g:terraform_fmt_on_save = 1
+'''
+
+[[plugins]]
 repo = 'leafgarland/typescript-vim'
 on_ft = 'typescript'
 
