--- a/.vim/settings/enhancement.toml
+++ b/.vim/settings/enhancement.toml
@@ -4,6 +4,9 @@
 
 [[plugins]]
 repo = 'Shougo/context_filetype.vim'
+hook_add = '''
+  let g:context_filetype#search_offset = 500
+'''
 
 [[plugins]]
 repo = 'osyo-manga/vim-precious'
