--- a/.gitconfig
+++ b/.gitconfig
@@ -57,3 +57,8 @@
   };zip"
 [include]
   path = ~/.gitconfig.local
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
