--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,11 +30,14 @@ bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded
 
 # window, pane
 unbind-key c
-bind-key c new-window -c "#{pane_current_path}"
+#bind-key c new-window -c "#{pane_current_path}"
+bind-key c new-window
 unbind-key %
-bind-key % split-window -h -c "#{pane_current_path}"
+#bind-key % split-window -h -c "#{pane_current_path}"
+bind-key % split-window -h
 unbind-key '"'
-bind-key '"' split-window -v -c "#{pane_current_path}"
+#bind-key '"' split-window -v -c "#{pane_current_path}"
+bind-key '"' split-window -v
 
 # share clipboard between tmux/vim
 # before: `brew install reattach-to-user-namespace`
@@ -67,8 +70,7 @@ set -g terminal-overrides "xterm:colors=256"
 # ---------------------------------------------------------------------------- #
 
 # statusline color
-set-window-option -g window-status-current-bg black
-set-window-option -g window-status-current-fg yellow
+set-window-option -g window-status-current-style bright
 set-option -g status-bg black
 set-option -g status-fg yellow
 
