--- a/.vim/settings/completion.toml
+++ b/.vim/settings/completion.toml
@@ -2,17 +2,18 @@
 # completion plugins
 # ---------------------------------------------------------------------------- #
 
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-if = '''has("nvim")'''
-hook_add = '''
-  let g:deoplete#enable_at_startup = 1
-  let g:deoplete#enable_smart_case = 1
-
-  call deoplete#custom#option('omni_patterns', {
-        \ 'terraform': '[^ *\t"{=$]\w*',
-        \})
-'''
+#[[plugins]]
+#repo = 'Shougo/deoplete.nvim'
+#if = '''has("nvim")'''
+#hook_add = '''
+#  let g:deoplete#enable_yarp = 1
+#  let g:deoplete#enable_at_startup = 1
+#  let g:deoplete#enable_smart_case = 1
+#
+#  call deoplete#custom#option('omni_patterns', {
+#        \ 'terraform': '[^ *\t"{=$]\w*',
+#        \})
+#'''
 
 [[plugins]]
 repo = 'carlitux/deoplete-ternjs'
