--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,27 +26,7 @@ set-option -sg escape-time 10
 
 # reload .tmux.conf (override)
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
-bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded."
-
-# window, pane
-unbind-key c
-#bind-key c new-window -c "#{pane_current_path}"
-bind-key c new-window
-unbind-key %
-#bind-key % split-window -h -c "#{pane_current_path}"
-bind-key % split-window -h
-unbind-key '"'
-#bind-key '"' split-window -v -c "#{pane_current_path}"
-bind-key '"' split-window -v
-
-# share clipboard between tmux/vim
-# before: `brew install reattach-to-user-namespace`
-set-option -g default-shell "$SHELL"
-set-option -g default-command "reattach-to-user-namespace -l $SHELL"
-
-# yank in tmux
-bind-key -T copy-mode-vi "v" send-keys -X begin-selection
-bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded!"
 
 
 
@@ -123,6 +103,9 @@ set-option -g @plugin "tmux-plugins/tmux-sidebar"
 # for vi pain-control
 # refs: https://github.com/tmux-plugins/tmux-pain-control
 set-option -g @plugin "tmux-plugins/tmux-pain-control"
+
+# for yank paste
+set-option -g @plugin 'tmux-plugins/tmux-yank'
 
 # initialize tmux plugin manager
 run-shell "~/.tmux/plugins/tpm/tpm"
