シェル周り見直し

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@ unbind-key C-b
 
 # vi mode in tmux
 set-window-option -g mode-keys vi
+set-option -g @shell_mode 'vi'
 
 # one based index (keyboard order)
 set-option -g base-index 1
