--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,6 @@ unbind-key C-b
 
 # vi mode in tmux
 set-window-option -g mode-keys vi
-set-option -g @shell_mode 'vi'
 
 # one based index (keyboard order)
 set-option -g base-index 1
@@ -28,6 +27,7 @@ set-option -sg escape-time 10
 # reload .tmux.conf (override)
 # http://d.hatena.ne.jp/kiririmode/20120321/p1
 bind-key r source-file ~/.tmux.conf\; display-message "$HOME/.tmux.conf reloaded!"
+bind-key -T copy-mode-vi 'v' send-keys -X  begin-selection
 
 
 
@@ -107,6 +107,7 @@ set-option -g @plugin "tmux-plugins/tmux-pain-control"
 
 # for yank paste
 set-option -g @plugin 'tmux-plugins/tmux-yank'
+set-option -g @shell_mode 'vi'
 
 # initialize tmux plugin manager
 run-shell "~/.tmux/plugins/tpm/tpm"
